--- a/CSS/mulicolorproject.html
+++ b/CSS/mulicolorproject.html
@@ -5,44 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NAV BAR</title>
-    <style>
-        * {
-            background-color: aqua;
-            margin: 3px;
-            padding: 2px;
-        }
-
-        ul {
-            font-size: larger;
-           
-            width: 90vmin;
-            display: inline;
-            color: red;
-            display: flex;
-        }
-
-        li {
-            position: relative;
-            top: 11px;
-            list-style: none;
-            margin: 3px;
-            padding: 3px;
-
-        }
-
-        .h {
-            font-size: xx-large;
-            color: blue;
-            padding:    -14px;
-            display: inline;
-        }
-
-        nav {
-            position: sticky;
-        }
-        div{
-            width: 80vmin;
-        }
+ <style>
+    *{
+        margin: 0;
+        padding: 0;
+    }
+    :root{
+        background-color: blue;
+    }
+    ul{
+        display: flex;
+    }
+    li{
+        list-style: none;
+        margin: 2px;
+        padding: 2px;
+    }
+ </style>
     </style>
 </head>
 
