--- a/CSS/mulicolorproject.html
+++ b/CSS/mulicolorproject.html
@@ -25,7 +25,7 @@
 
         li {
             list-style: none;
-            margin: 2px;
+            margin: 6px;
             padding: 2px;
         }
 
@@ -35,10 +35,20 @@
             box-sizing: border-box;
 
         }
+
         a {
             text-decoration: none;
             color: black;
             font-size: large;
+        }
+
+        .h {
+            margin-right: 6px;
+        }
+
+        .l {
+            margin-top: 8px;
+            margin-left: 570px;
         }
     </style>
     </style>
@@ -50,10 +60,15 @@
 
             <ul>
                 <h2 class="h">MANDEEP</h2>
-                <li><a href="CSS\display property in css.html" target="_blank">HOME</a></li>
-                <li><a href="CSS\css specificity.html" target="_blank">WORKSHOP</a></li>
-                <li><a href="CSS\sdding css and three type.html" target="_blank">ABOUT</a></li>
-                <li><a href="CSS\shadow and outline.html" target="_blank">CONTACT</a></li>
+                <li>HOME</li>
+                <li>WORKSHOP</li>
+                <li>ABOUT</li>
+                <li>CONTACT</a></li>
+
+
+                <div class="l"> <label for="Search">Search:</label>
+                    <input type="text" name="Search" id="Search" placeholder="Search bar">
+                </div>
             </ul>
 
         </nav>
